--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "0.0.17",
+    "@react-email/container": "0.0.12",
+    "@react-email/html": "^0.0.8",
+    "@react-email/render": "^0.0.13",
+    "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.7.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.2",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
