--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.7.0",
     "lucide-react": "^0.441.0",
