--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "0.0.17",
     "@react-email/container": "0.0.12",
@@ -27,6 +28,7 @@
     "react-dom": "^18",
     "react-email": "^2.1.2",
     "react-icons": "^5.3.0",
+    "react-tweet": "^3.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
